Update README, add images-service.js, add file imports to main, add display section to html

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-  <title>NASA project</title>
-</head>
-<body>
-  <div class="container">
-    <div class="jumbotron">
-      <h3>NASA Weather & Images</h3>
-    </div>
-    <form id="nasa-form">
-      <div class="form-group">
-        <label for="search-term">Search here:</label>
-        <input id="search-term" class="form-control" type="text">
+  <head>
+    <title>NASA project</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h3>NASA Weather & Images</h3>
       </div>
-      <button type="submit" class="btn">Search</button> 
-    </form>
-    <div class="test"></div>
-  </div>
-</body>
+      <form id="nasa-form">
+        <div class="form-group">
+          <label for="search-term">Search here:</label>
+          <input id="search-term" class="form-control" type="text" />
+        </div>
+        <button type="submit" class="btn">Search</button>
+      </form>
+      <div class="image-display">
+        <ul></ul>
+      </div>
+    </div>
+  </body>
 </html>
