--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h3>NASA Weather & Images</h3>
+        <h1>NASA Weather & Images</h1>
       </div>
       <form id="nasa-form">
         <div class="form-group">
-          <label for="search-term">Search here:</label>
+          <label for="search-term" class="body-text">Search here:</label>
           <input id="search-term" class="form-control" type="text" />
         </div>
         <button type="submit" class="btn">Search</button>
