Pass console log & html display test on API data
Co-authored-by: Randel Moore <randel.c.moore@gmail.com>
Co-authored-by: Glen Buck <glenbuck503@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
           <label for="search-term" class="body-text">Search here:</label>
           <input id="search-term" class="form-control" type="text" />
         </div>
-        <button type="submit" class="btn">Search</button>
+        <button type="submit" class="btn" id="search-button">Search</button>
       </form>
-      <div class="image-display">
+      <div id="image-display">
         <ul></ul>
       </div>
     </div>
