--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
       </div>
       <form id="nasa-form">
         <div class="form-group">
+          <p>Curious what the weather on Mars looks like? Click the button below to find out!</p>
+        </div>
+        <button type="submit" class="btn" id="mars-weather">Show Mars Weather</button>
+        <div id="mars-output">
+          <ul></ul>
+        </div>
+        <div class="form-group">
           <label for="search-term" class="body-text">Search here:</label>
           <input id="search-term" class="form-control" type="text" />
         </div>
